# vook_db_v4

./: .gitignore  pyproject.toml  vook_db_ddl.sh  vook_db_load.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 機能開発.md
data/input/: line.csv
notebook/: builder_age.ipynb  get_yahoo_data.ipynb  get_yahoo_data_desc.ipynb  list_up_item.ipynb  list_up_line.ipynb  logic_item.ipynb
tests/: test_builder.py  test_extract_age_both.py  test_extract_age_only.py  test_extract_decades.py  test_extract_decades_only.py  test_extract_item.py  test_validates.py  test_vook_db_v4.py
vook_db_v4/: builder.py  config.py  extract_age.py  extract_decades.py  extract_item.py  get_yahoo_data.py  get_yahoo_data_v2.py  validates.py
vook_db_v4/ddl/: ages.ddl  brands.ddl  items.ddl  line.ddl  platforms.ddl  products.ddl
