[tool.poetry]
name = "vook_db_v4"
version = "0.1.0"
description = ""
authors = ["atsushimemet <noap3b69n@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
jupyterlab = "^3.6.3"
jupyterlab-code-formatter = "^1.6.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
types-requests = "^2.29.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
